[package]
name = "deck"
version = "0.17.0"
edition = "2021"
description = "Operator cyberdeck — terminal UI for the Net mesh"
license = "Apache-2.0"
publish = false

[[bin]]
name = "deck"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
color-eyre = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
ai2070-net-sdk = { path = "../sdk", features = ["meshos", "deck", "dataforts"] }
bytes = "1"
parking_lot = "0.12"
futures = { version = "0.3", default-features = false, features = ["std"] }
# Bookmark store at `$XDG_CONFIG_HOME/deck/bookmarks.toml`.
serde = { version = "1", features = ["derive"] }
toml = "0.9"
dirs = "6"
# ISO 8601 timestamps in export filenames so operators can
# `chrono::DateTime::parse_from_rfc3339` (after the `-` → `:`
# un-mangle for filename safety) or feed them to JS
# `Date.parse`.
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[features]
default = []
# `samples` opts in to a synthetic event seeder:
# 17 fake peers via Locality/Health probes, 11 daemons
# across all four lineage groups, and a background tokio
# task publishing log lines + cordon/uncordon admin
# events. Useful for screenshots, walkthroughs, and
# offline visual work on the UI.
#
#   cargo run -p deck --features samples
#
# Default (no flag) spawns the same in-process runtime
# but injects nothing — the deck shows the empty cluster
# view, ready to connect to real cluster sources.
samples = []
# `samples-logs` opts in to a background log + mesh-event
# seeder. Independent of `samples` (the deck doesn't need
# fake daemons to render log content), but the two stack:
# combining `samples,samples-logs` produces a feature-rich
# screenshot environment where daemon-tagged logs reference
# the registered fake daemons.
#
#   cargo run -p deck --features samples-logs
#   cargo run -p deck --features samples,samples-logs
samples-logs = []
