[package]
name = "deck"
version = "0.19.0"
edition = "2021"
description = "Operator cyberdeck — terminal UI for the Net mesh"
license = "Apache-2.0"
publish = false

[[bin]]
name = "deck"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
color-eyre = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
ai2070-net-sdk = { path = "../sdk", features = ["meshos", "deck", "dataforts"] }
bytes = "1"
parking_lot = "0.12"
futures = { version = "0.3", default-features = false, features = ["std"] }
# Bookmark store at `$XDG_CONFIG_HOME/deck/bookmarks.toml`.
serde = { version = "1", features = ["derive"] }
toml = "1.0"
dirs = "6"
# ISO 8601 timestamps in export filenames so operators can
# `chrono::DateTime::parse_from_rfc3339` (after the `-` → `:`
# un-mangle for filename safety) or feed them to JS
# `Date.parse`.
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[features]
default = []
# `demo` boots a real 5-node in-process MeshOS cluster via
# `net_sdk::testing::ClusterHarness` and registers real daemons
# across the nodes. The deck observes node[0]'s view; the
# substrate folds peer / daemon / log / chain state naturally
# through the bridge probes + real `MeshOsDaemonSdk` registrations,
# real `MigrationOrchestrator` migrations, and real
# `RpcObserver`-driven nRPC traffic.
#
# Replaces the legacy `samples` + `samples-logs` synthetic
# fixtures that this binary used to ship; the dev-only `demo`
# flag is the single supported "show me real cluster
# telemetry" path.
#
# See `crates/net/docs/plans/DECK_DEMO_PLAN.md`. Dev-only; never
# ship to crates.io as a default feature.
#
#   cargo run -p deck --features demo
demo = ["ai2070-net-sdk/testing", "ai2070-net-sdk/cortex"]
